--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-venv/
-.idea/
+hw1_duck/venv/
+hw1_duck/.idea/
+.DS_Store
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
